--- a/client/src/pages/Blog/static/blog.css
+++ b/client/src/pages/Blog/static/blog.css
@@ -31,6 +31,15 @@
     box-shadow: 5px 5px 70px 5px rgba(0, 0, 0, 0.75);
     border-radius: 6px;
 }
+.post pre{
+    background-color: black;
+    color: yellowgreen;
+    overflow: hidden;
+    padding: 5px;
+}
+.post .content *{
+ font-size: x-large;
+}
 
 .text{ 
     overflow: hidden; 
