--- a/client/src/pages/Blog/static/create_post.css
+++ b/client/src/pages/Blog/static/create_post.css
@@ -3,7 +3,7 @@
 }
 
 .main-div{
-    height: 100vh;
+    height: 100%;
     display:flex;
     justify-content: center;
     /* align-items: center; */
