added font Awesome Icons

--- a/client/src/pages/Blog/static/blog.css
+++ b/client/src/pages/Blog/static/blog.css
@@ -37,8 +37,13 @@
     overflow: hidden;
     padding: 5px;
 }
-.post .content *{
- font-size: x-large;
+.post .content h2, h3, h1{
+ display:none;
+
+}
+.post .content p{
+    display: block;
+    margin:0;
 }
 
 .text{ 
