--- a/client/src/components/logReg.css
+++ b/client/src/components/logReg.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     height: 80vh;
-    background-color: #3f51b5;
+    background-color: white;
     padding: 100px;
 }
 
@@ -19,8 +19,8 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    color: white;
-    background-color: darkslateblue;
+    color: darkslategray;
+    background-color: white;
     height: 500px;
     
 }
@@ -28,6 +28,55 @@
     width: 300px;
 }
 .d-log> a, .d-log > button {
+    color: darkslateblue !important;
+}
+
+.auth:hover{
+    background-color: darkslateblue;
+}
+.buttons >.active {
+    background-color: darkslateblue;
+}
+
+.buttons{
+    margin-bottom: 20px;
+    
+}
+
+.btn-outline-danger:hover {
     color: white !important;
 }
 
+.buttons button{
+    color: white;
+    background-color: dodgerblue;
+    padding: 5px 25px;
+    border-radius: 6px;
+    
+}
+
+.buttons button:nth-child(1){
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    margin-left: 0px;
+}
+.buttons button:nth-child(2){
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    margin-right: 0px;
+}
+
+.icon:hover{
+color: dodgerblue;
+}
+
+.d-log input{
+    border: none;
+    border-bottom: #EEE 3px solid;
+    font-size: 15px;
+    font-family: 'montserrat',sans-serif;
+}
+
+input[type=file]{
+    border: none;
+}
