--- a/client/src/pages/Blog/static/blog.css
+++ b/client/src/pages/Blog/static/blog.css
@@ -37,9 +37,8 @@
     overflow: hidden;
     padding: 5px;
 }
-.post .content h2, h3, h1{
+.post > .content> h2, .content > h3, .content > h1{
  display:none;
-
 }
 .post .content p{
     display: block;
@@ -56,13 +55,214 @@
     color:white;
     font-family: "montserrat",sans-serif;
 }
-h5,h3{
+.wr-posts h5, .wr-posts h3{
     color: white;
     font-weight: bold;
     font-family: "montserrat",sans-serif;
 }
 
-.title h5{
+.post  .title h5{
     text-decoration: none;
+    font-family: 'montserrat',sans-serif;
 }
 
+.title{
+  font-family: 'montserrat',sans-serif;
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.single-content {
+    min-width: auto;
+    padding: 10px;
+    
+    overflow: hidden;
+    color: darkslateblue !important;
+    
+    }
+    
+    
+    .single-content p,blockquote,h2{
+      font-family: 'montserrat';
+    }
+    .single-content img{
+      max-width: 600px;
+    }
+    .single-content pre {
+      width: 500px;
+      background: black;
+      padding : 5px;
+      color: yellowgreen;
+    }
+   
+    
+    .single-post {
+      min-height: 100%;
+      
+    }
+    
+    
+    .img-container > img{
+      max-width: 1000px;
+      /* width: 60%; */
+      height:auto;
+      
+      /* margin:auto; */
+      background-size: auto
+    
+    }
+    @media only screen and (max-width: 736px){
+      .img-container > img{
+        width: 100%;
+        height: auto;
+      }
+      .img-container{
+        width: 100%;
+      }
+    }
+    
+    
+    .text-muted{
+      color:white !important;
+    }
+    
+    .single-post  blockquote {
+        background: #f9f9f9;
+        border-left: 10px solid #ccc;
+        margin: 1.5em 10px;
+        padding: 0.5em 10px;
+        quotes: "\201C""\201D""\2018""\2019";
+        font-weight: bolder;
+        font-size: 25px;
+        color: darkslateblue !important;
+      }
+      .single-post  blockquote:before {
+        color: darkslateblue;
+        content: open-quote;
+        font-size: 4em;
+        line-height: 0.1em;
+        margin-right: 0.25em;
+        vertical-align: -0.4em;
+      }
+      .single-post  blockquote p {
+        display: inline;
+        color: darkslateblue;
+      }
+      .single_post_page{
+        height: 100%;
+       
+      }
+      .single-post > h5{
+        font-size: 15px;
+        font-family: 'montserrat',sans-serif;
+        font-weight: 800;
+      }
+    
+      .single-content > pre{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: auto;
+      }
+    
+    
+    
+    
+      
+    
+    
+    
+    
+    
+    
+    
+    
+    
+      /*Comments*/
+    
+      .comment-box{
+    
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+      }
+      .comment-box > textarea{
+        width:400px;
+        margin: 15px;
+        background-color: #EEE;
+      }
+      .comment-box > button{
+        margin-bottom: 15px;
+      }
+      .comments{
+        display:flex;
+        flex-direction: column;
+        margin: auto;
+        width: 400px;
+        position: relative;
+        margin-top: 0px;
+        /* background-color: #EEE; */
+      }
+      .comments h3 {
+        text-align: center;
+      }
+    
+    
+      .comment{
+        height: 80px;
+        width: 320px;
+        padding: 8px;
+        display:flex;
+        flex-direction: column;
+        border-radius: 6px;;
+        margin: 5px auto;
+        float: left;
+        background-color: blueviolet;
+        color: white;
+        
+      }
+      .comment_div {
+        display: flex;
+        flex-direction: row;
+        width: auto;
+        justify-content: center;
+      }
+      .comment_div > img{
+        width: 50px;
+        margin: auto;
+      }
+    
+      .comment > p {
+        font-family: 'montserrat',sans-serif;
+        float: left;
+      }
+      .comment > p:nth-child(1){
+        font-size: 20px;
+      }
+
+
+
+      
+      .create_post{
+        width: 650px;
+    }
+    
+    .main-div{
+        height: 100%;
+        display:flex;
+        justify-content: center;
+        /* align-items: center; */
+    }
