--- a/client/src/components/logReg.css
+++ b/client/src/components/logReg.css
@@ -22,6 +22,7 @@
     color: darkslategray;
     background-color: white;
     height: 500px;
+    z-index: 9;
     
 }
 .d-log > input {
@@ -80,3 +81,22 @@ color: dodgerblue;
 input[type=file]{
     border: none;
 }
+
+.react {
+    animation: App-logo-spin infinite 5s linear;
+    width:100%;
+   transition: transform 1.3s ease-in;
+   margin-bottom: 20px;
+  margin:0px;
+  padding: 0px;
+  z-index: -1;
+    
+ }
+@keyframes App-logo-spin {
+from {
+      transform: rotate(0deg);
+}
+to {
+      transform: rotate(360deg);
+}
+  }
