--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,16 @@
 @import '~antd/dist/antd.css';
 html,body{
-  height: 100vh;
+  
   margin: 0;
+  padding:0;
+  font-size: 100%;
+}
+
+*{
+  margin:0;
+  padding: 0;
+  border: 0;
+  outline: 0;
 }
 
 .wrapper{
