--- a/client/src/pages/landing.css
+++ b/client/src/pages/landing.css
@@ -1,5 +1,5 @@
 .landing{
-    padding-top:"100px"; 
+    /* padding-top:"100px";  */
     text-align: "center";
     min-height: "100vh";
     background-color: "#3f51b5";
