made some adjustments to the ui

--- a/client/src/components/UI/static/Footer.css
+++ b/client/src/components/UI/static/Footer.css
@@ -26,7 +26,7 @@ footer a{
 }
 
 
-@media only screen (max-width: 600px){
+@media only screen and (max-width: 600px){
     footer ul{
         display:none;
     }
