--- a/client/src/pages/Blog/static/blog.css
+++ b/client/src/pages/Blog/static/blog.css
@@ -1,7 +1,7 @@
 
 .wr-posts{
     background-color: #3f51b5;
-    /* margin: auto; */
+    
     padding-top: 20px;
     text-align: center;
     /* display: block; */
@@ -16,14 +16,20 @@
 }
 .p-img{
     object-fit: cover ;
-    width: 100%;
-    height: 50%;
+    max-width: 100%;
+    height: 156px ;
     position: relative;
 }
 
+
+.Blogs{
+  display: flex;
+  flex-direction: row;
+  flex-flow: wrap;
+  justify-content: center;
+}
 .post{
     background-color: #42a5f5db;
-    display:inline-block;
     width:300px;
     margin:0px 25px 25px;
     height: 350px;
@@ -37,7 +43,7 @@
     overflow: hidden;
     padding: 5px;
 }
-.post > .content> h2, .content > h3, .content > h1{
+.post  .content> h2, .content > h3, .content > h1{
  display:none;
 }
 .post .content p{
@@ -49,12 +55,18 @@
 .text{ 
     overflow: hidden; 
     text-overflow: ellipsis; 
-    line-height: 16px;   
-    max-height: 18.5%;      
-    padding: 0px 20px;
+    line-height: 20px;   
+    height: 80px;
+    text-align: left;
+    margin-top: 20px;
+    padding: 0px 20px !important;
     word-wrap: break-word;
     color:white;
     font-family: "montserrat",sans-serif;
+}
+
+.text br{
+  display: none;
 }
 .wr-posts h5, .wr-posts h3{
     color: white;
@@ -277,4 +289,52 @@
         display:flex;
         justify-content: center;
         /* align-items: center; */
+    }
+
+    @media only screen and (max-width: 600px){
+      .post{
+        display: flex;
+        flex-direction: row;
+        max-width: 100%;
+        width:350px;
+        height: 120px;
+        margin: 16px 5px !important;
+      }
+     
+      .blog{
+        display: flex;
+        flex-direction: column;
+        width: 250px;
+        padding: 5px;
+      }
+      .title h5{
+        margin: 0px 2px!important;
+      }
+      .post-title , .writer {
+        padding: 0px !important;
+        max-width: 100% !important;
+        min-height:30px;
+        height: 30px;
+      }
+      
+      .post-title h5, .content{
+        flex: 8;
+        font-size: 13px !important;
+      }
+      .content{
+        margin: 0px !important;
+        padding: 5px  5px!important;
+        min-height:40px !important;
+        height:40px !important;
+      }
+      .post-title p{
+        flex: 2;
+      }
+      .post .thumbnail{
+        width: 130px !important;
+      }
+      .post img{
+        height: 100%;
+        margin: 0px !important;
+      }
     }
