--- a/client/src/components/logReg.css
+++ b/client/src/components/logReg.css
@@ -20,15 +20,20 @@
     align-items: center;
     justify-content: center;
     color: darkslategray;
-    background-color: white;
+ 
     height: 500px;
-    z-index: 9;
+    /* z-index: 2; */
+    
+}
+
+.d-log *{
+    font-family: 'Circular Std Book';
     
 }
 .d-log > input {
     width: 300px;
 }
-.d-log> a, .d-log > button {
+ .d-log > button {
     color: darkslateblue !important;
 }
 
@@ -52,28 +57,28 @@
     color: white;
     background-color: dodgerblue;
     padding: 5px 25px;
-    border-radius: 6px;
+    
     
 }
+.S-in{
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+}
+.S-up{
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
 
-.buttons button:nth-child(1){
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    margin-left: 0px;
-}
-.buttons button:nth-child(2){
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    margin-right: 0px;
-}
+
+
 
 .icon:hover{
 color: dodgerblue;
 }
 
 .d-log input{
-    border: none;
-    border-bottom: #EEE 3px solid;
+    border: 1px solid gainsboro;
+    outline: none;
     font-size: 15px;
     font-family: 'montserrat',sans-serif;
 }
@@ -82,21 +87,20 @@ input[type=file]{
     border: none;
 }
 
-.react {
-    animation: App-logo-spin infinite 5s linear;
+.react2 {
     width:100%;
    transition: transform 1.3s ease-in;
    margin-bottom: 20px;
   margin:0px;
   padding: 0px;
-  z-index: -1;
     
  }
-@keyframes App-logo-spin {
-from {
-      transform: rotate(0deg);
-}
-to {
-      transform: rotate(360deg);
-}
-  }
+
+ .login-btn{
+     background-color: #20B6ff;
+     color: white !important;
+     line-height: 40px;
+     height: 40px;
+     width: 120px;
+     border-radius: 6px;
+ }
