--- a/client/src/pages/Blog/static/blog.css
+++ b/client/src/pages/Blog/static/blog.css
@@ -86,6 +86,7 @@
   
 }
 
+
 :root{
   --lh: 1.4rem;
 }
@@ -101,7 +102,7 @@
   overflow: hidden;
   padding-right: 1rem; /* space for ellipsis */
 }
-.truncate-overflow::before ,content::before{
+.truncate-overflow::before {
   position: absolute;
   content: "...";
   /* tempting... but shows when lines == content */
@@ -111,10 +112,10 @@
   inset-block-end: 0;
   inset-inline-end: 0;
   */
-  bottom: 0;
-  right: 0;
+  bottom: 1%;
+  right: 4%;
 }
-.truncate-overflow::after , content::after{
+.truncate-overflow::after {
   content: "";
   position: absolute;
   /*
@@ -343,7 +344,7 @@
         display: flex;
         flex-direction: row;
         max-width: 100%;
-        width:350px;
+        width:360px;
         height: 120px;
         margin: 16px 5px !important;
       }
@@ -385,5 +386,19 @@
       .post img{
         height: 100%;
         margin: 0px !important;
+      }
+
+
+      .truncate-overflow::before {
+        
+        /* tempting... but shows when lines == content */
+        /* top: calc(var(--lh) * (var(--max-lines) - 1)); */
+        
+        /*
+        inset-block-end: 0;
+        inset-inline-end: 0;
+        */
+        bottom: -2%;
+        right: 4%;
       }
     }
