--- a/client/src/components/UI/static/Navbar.css
+++ b/client/src/components/UI/static/Navbar.css
@@ -74,7 +74,9 @@ nav> a:nth-child(1) sup{
     transform: translateY(-4px) rotate(135deg);
 }
 
-
+.profile svg{
+    margin: 0px 15px;
+}
 
 
 .drawer{
@@ -101,6 +103,7 @@ nav> a:nth-child(1) sup{
      margin: 0px;
      cursor: pointer;
     font-weight: bolder; 
+    border-bottom: 1px solid gainsboro;
  }
  .drawer li a{
      color: white;
