--- a/client/src/components/UI/static/Navbar.css
+++ b/client/src/components/UI/static/Navbar.css
@@ -101,9 +101,14 @@ nav> a:nth-child(1) sup{
  .drawer li{
      padding: 15px 5px;
      margin: 0px;
+     outline: none;
+     
      cursor: pointer;
     font-weight: bolder; 
     border-bottom: 1px solid gainsboro;
+ }
+ .drawer li:nth-of-type(3){
+     border: none;
  }
  .drawer li a{
      color: white;
