--- a/client/src/pages/Blog/static/blog.css
+++ b/client/src/pages/Blog/static/blog.css
@@ -1,6 +1,7 @@
 
 .wr-posts{
     background-color: #3f51b5;
+    /* background-color: white; */
     /* background-image:linear-gradient(131deg, rgb(50, 139, 242) 1%, rgb(22, 68, 173) 67%); */
     padding-top: 20px;
     text-align: center;
@@ -35,7 +36,8 @@
     margin:0px 25px 25px;
     height: 350px;
     overflow: hidden;
-    box-shadow: 5px 5px 70px 5px rgba(0, 0, 0, 0.75);
+    /* box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, 0.95); */
+    box-shadow: 2px 3px 15px rgba(0,0,0,0.2);
     border-radius: 6px;
 }
 .post pre{
